feat: add basic cache eviction policy: LRU/LFU/FIFO (#166)
* feat: add basic cache eviction policy: LRU/LFU/FIFO

Signed-off-by: Alex Wang <yesterda9@gmail.com>

* use EvictionPolicyType

Signed-off-by: Alex Wang <yesterda9@gmail.com>

* update doc

Signed-off-by: Alex Wang <yesterda9@gmail.com>

---------

Signed-off-by: Alex Wang <yesterda9@gmail.com>
Co-authored-by: Huamin Chen <rootfs@users.noreply.github.com>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,6 +8,7 @@ semantic_cache:
   similarity_threshold: 0.8
   max_entries: 1000  # Only applies to memory backend
   ttl_seconds: 3600
+  eviction_policy: "fifo"  # "fifo", "lru", "lfu", currently only supports memory backend
 
   # For production environments, use Milvus for scalable caching:
   # backend_type: "milvus"
