refactor: separate e2e and production configs
- Create config.e2e.yaml with LLM Katan endpoints for e2e tests
- Restore config.yaml to original production endpoints (matches origin/main)
- Add run-router-e2e target to use e2e config (config/config.e2e.yaml)
- Add start-llm-katan and test-e2e-vllm targets for LLM Katan testing
- Update Makefile help with new e2e test targets
- Remove egg-info directory from git tracking (now in .gitignore)
- Keep pyproject.toml at stable version 0.1.4, always install latest via pip

This separation allows:
- Production config stays clean with real vLLM endpoints
- E2E tests use lightweight LLM Katan servers
- Clear distinction between test and production environments
- Always use latest LLM Katan features via unpinned pip installation

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/config/config.e2e.yaml
+++ b/config/config.e2e.yaml
@@ -61,6 +61,20 @@ vllm_endpoints:
       - "phi4"  # Same model can be served by multiple endpoints for redundancy
       - "mistral-small3.1"
     weight: 2  # Higher weight for more powerful endpoint
+  - name: "qwen-endpoint"
+    address: "127.0.0.1"
+    port: 8000
+    models:
+      - "Qwen/Qwen2-0.5B-Instruct"
+    weight: 1
+    health_check_path: "/health"
+  - name: "tinyllama-endpoint"
+    address: "127.0.0.1"
+    port: 8001
+    models:
+      - "TinyLlama/TinyLlama-1.1B-Chat-v1.0"
+    weight: 1
+    health_check_path: "/health"
 
 model_config:
   phi4:
@@ -113,6 +127,17 @@ model_config:
       allow_by_default: false  # Deny all PII by default
       pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER"]  # Only allow these specific PII types
     preferred_endpoints: ["endpoint2", "endpoint3"]
+  "Qwen/Qwen2-0.5B-Instruct":
+    reasoning_family: "qwen3"  # This model uses Qwen reasoning syntax
+    preferred_endpoints: ["qwen-endpoint"]
+    pii_policy:
+      allow_by_default: true
+      pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER"]
+  "TinyLlama/TinyLlama-1.1B-Chat-v1.0":
+    preferred_endpoints: ["tinyllama-endpoint"]
+    pii_policy:
+      allow_by_default: true
+      pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER"]
 
 # Classifier configuration for text classification
 classifier:
@@ -226,8 +251,10 @@ categories:
     reasoning_description: "Mathematical problems require step-by-step reasoning"
     reasoning_effort: high  # Math problems need high reasoning effort
     model_scores:
-      - model: phi4
+      - model: TinyLlama/TinyLlama-1.1B-Chat-v1.0
         score: 1.0
+      - model: phi4
+        score: 0.9
       - model: mistral-small3.1
         score: 0.8
       - model: gemma3:27b
