fix: include models directory in Dockerfile.extproc
Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/Dockerfile.extproc
+++ b/Dockerfile.extproc
@@ -50,6 +50,7 @@ WORKDIR /app
 COPY --from=go-builder /app/bin/router /app/extproc-server
 COPY --from=go-builder /app/candle-binding/target/release/libcandle_semantic_router.so /app/lib/
 COPY config/config.yaml /app/config/
+COPY models/ /app/models/
 
 ENV LD_LIBRARY_PATH=/app/lib
 
