--- a/deploy/kubernetes/config.yaml
+++ b/deploy/kubernetes/config.yaml
@@ -31,17 +31,28 @@ prompt_guard:
 # Supported formats: 127.0.0.1, 192.168.1.1, ::1, 2001:db8::1
 # NOT supported: domain names (example.com), protocol prefixes (http://), paths (/api), ports in address (use 'port' field)
 vllm_endpoints:
-  - name: "endpoint1"
-    address: "127.0.0.1"  # IPv4 address - REQUIRED format
+  - name: "math-specialist"
+    address: "127.0.0.1"
     port: 8000
     models:
-      - "openai/gpt-oss-20b"
+      - "math-specialist"
+    weight: 1
+  - name: "coding-specialist"
+    address: "127.0.0.1"
+    port: 8001
+    models:
+      - "coding-specialist"
     weight: 1
 
 model_config:
-  "openai/gpt-oss-20b":
-    reasoning_family: "gpt-oss"  # This model uses GPT-OSS reasoning syntax
-    preferred_endpoints: ["endpoint1"]
+  "math-specialist":
+    reasoning_family: "gpt-oss"
+    preferred_endpoints: ["math-specialist"]
+    pii_policy:
+      allow_by_default: true
+  "coding-specialist":
+    reasoning_family: "gpt-oss"
+    preferred_endpoints: ["coding-specialist"]
     pii_policy:
       allow_by_default: true
 
@@ -64,76 +75,76 @@ classifier:
 categories:
   - name: business
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.7
-        use_reasoning: false  # Business performs better without reasoning
+        use_reasoning: false
   - name: law
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.4
         use_reasoning: false
   - name: psychology
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.6
         use_reasoning: false
   - name: biology
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.9
         use_reasoning: false
   - name: chemistry
     model_scores:
-      - model: openai/gpt-oss-20b
-        score: 0.6
+      - model: math-specialist
+        score: 0.8
         use_reasoning: true  # Enable reasoning for complex chemistry
   - name: history
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.7
         use_reasoning: false
   - name: other
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.7
         use_reasoning: false
   - name: health
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.5
         use_reasoning: false
   - name: economics
     model_scores:
-      - model: openai/gpt-oss-20b
-        score: 1.0
+      - model: math-specialist
+        score: 0.9
         use_reasoning: false
   - name: math
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: math-specialist
         score: 1.0
         use_reasoning: true  # Enable reasoning for complex math
   - name: physics
     model_scores:
-      - model: openai/gpt-oss-20b
-        score: 0.7
+      - model: math-specialist
+        score: 0.9
         use_reasoning: true  # Enable reasoning for physics
   - name: computer science
     model_scores:
-      - model: openai/gpt-oss-20b
-        score: 0.6
+      - model: coding-specialist
+        score: 1.0
         use_reasoning: false
   - name: philosophy
     model_scores:
-      - model: openai/gpt-oss-20b
+      - model: coding-specialist
         score: 0.5
         use_reasoning: false
   - name: engineering
     model_scores:
-      - model: openai/gpt-oss-20b
-        score: 0.7
+      - model: coding-specialist
+        score: 0.8
         use_reasoning: false
 
-default_model: openai/gpt-oss-20b
+default_model: coding-specialist
 
 # Reasoning family configurations
 reasoning_families:
