--- a/deploy/openshift/deployment.yaml
+++ b/deploy/openshift/deployment.yaml
@@ -195,7 +195,7 @@ spec:
         - "Qwen/Qwen2.5-0.5B"
         - "--port"
         - "8000"
-        - "--name"
+        - "--served-model-name"
         - "math-specialist"
         - "--device"
         - "cpu"
@@ -247,10 +247,10 @@ spec:
         command: ["llm-katan"]
         args:
         - "--model"
-        - "Qwen/Qwen2.5-Coder-0.5B"
+        - "Qwen/Qwen2.5-0.5B"
         - "--port"
         - "8001"
-        - "--name"
+        - "--served-model-name"
         - "coding-specialist"
         - "--device"
         - "cpu"
