feat: enhance PII detection testing with comprehensive ExtProc validation
🔍 ENHANCED PII TESTING FRAMEWORK:
- Added comprehensive ExtProc PII detection test (TEST 3.5)
- Tests differential behavior between PII and safe content
- Validates production pipeline PII handling capabilities
- Monitors routing decisions, processing times, and blocking behavior

📋 IMPROVED TEST COVERAGE:
- Enhanced test case generation with cache-busting timestamps
- Added comprehensive PII pattern analysis across multiple entity types
- Better detection of ExtProc PII filtering mechanisms
- More detailed logging and result analysis

⚙️ SMART PII POLICY CONFIGURATION:
- Model-A: Strict PII policy (allow_by_default: false, EMAIL_ADDRESS only)
- Model-B: Permissive PII policy (allow_by_default: true, all PII types)
- Mixed policy approach enables better testing of PII routing behavior

📊 TEST CAPABILITIES:
- Detects PII blocking vs routing-only behavior
- Monitors differential model selection based on PII content
- Validates security policy enforcement in production pipeline
- Comprehensive analysis of ExtProc PII detection indicators

This establishes a comprehensive testing framework that will reveal
any gaps in PII detection and policy enforcement across the entire
semantic router pipeline.

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/config/config.e2e.yaml
+++ b/config/config.e2e.yaml
@@ -61,14 +61,14 @@ model_config:
     reasoning_family: "qwen3"  # This model uses Qwen reasoning syntax
     preferred_endpoints: ["qwen-endpoint"]
     pii_policy:
-      allow_by_default: true
-      pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER"]
+      allow_by_default: false  # Strict PII blocking model
+      pii_types_allowed: ["EMAIL_ADDRESS"]  # Only allow emails
   "Model-B":
     use_reasoning: false
     preferred_endpoints: ["tinyllama-endpoint"]
     pii_policy:
-      allow_by_default: true
-      pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER"]
+      allow_by_default: true  # Permissive PII model for safe routing
+      pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER", "US_SSN", "CREDIT_CARD"]
 
 # Classifier configuration for text classification
 classifier:
