feat: add OpenShift-specific Envoy configuration and enhance deployment
- Add deploy/openshift/envoy-openshift.yaml to isolate OpenShift-specific Envoy config
- Update deploy script to use OpenShift-specific Envoy configuration
- Enhance cleanup script with port forwarding cleanup functionality
- Add Dockerfile.llm-katan for specialist container builds
- Make Envoy part of default enhanced deployment without special flags
- Preserve main config/envoy.yaml unchanged per project maintainer preference

This allows OpenShift deployments to work with Kubernetes networking
while keeping the main project Envoy configuration file unmodified.

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/deploy/openshift/buildconfig-llm-katan.yaml
+++ b/deploy/openshift/buildconfig-llm-katan.yaml
@@ -11,7 +11,7 @@ spec:
     type: Git
     git:
       uri: https://github.com/vllm-project/semantic-router.git
-      ref: openshift-deploy
+      ref: main
     contextDir: .
   strategy:
     type: Docker
