--- a/deploy/openshift/config-openshift.yaml
+++ b/deploy/openshift/config-openshift.yaml
@@ -29,32 +29,32 @@ prompt_guard:
 # vLLM Endpoints Configuration
 # IMPORTANT: Using localhost since containers are in same pod
 vllm_endpoints:
-  - name: "model-a-endpoint"
+  - name: "coding-model-endpoint"
     address: "127.0.0.1"  # localhost in same pod
     port: 8000
     models:
-      - "Model-A"
+      - "coding-model"
     weight: 1
-  - name: "model-b-endpoint"
+  - name: "general-model-endpoint"
     address: "127.0.0.1"  # localhost in same pod
     port: 8001
     models:
-      - "Model-B"
+      - "general-model"
     weight: 1
 
 model_config:
-  "Model-A":
+  "coding-model":
     reasoning_family: "qwen3"  # This model uses Qwen reasoning syntax
-    preferred_endpoints: ["model-a-endpoint"]
+    preferred_endpoints: ["coding-model-endpoint"]
     pii_policy:
-      allow_by_default: false  # Strict PII blocking model
+      allow_by_default: false  # Strict PII blocking
       pii_types_allowed: ["EMAIL_ADDRESS"]  # Only allow emails
-  "Model-B":
+  "general-model":
     reasoning_family: "qwen3"  # This model uses Qwen reasoning syntax
-    preferred_endpoints: ["model-b-endpoint"]
+    preferred_endpoints: ["general-model-endpoint"]
     pii_policy:
-      allow_by_default: true  # Permissive PII model for safe routing
-      pii_types_allowed: ["EMAIL_ADDRESS", "PERSON", "GPE", "PHONE_NUMBER", "US_SSN", "CREDIT_CARD"]
+      allow_by_default: false  # Strict PII blocking (changed from true)
+      pii_types_allowed: ["EMAIL_ADDRESS"]  # Only allow emails (same as coding-model)
 
 # Classifier configuration
 classifier:
@@ -71,94 +71,28 @@ classifier:
     use_cpu: true
     pii_mapping_path: "models/pii_classifier_modernbert-base_presidio_token_model/pii_type_mapping.json"
 
-# Categories with new use_reasoning field structure
+# Categories - Simplified to 2 categories for demo clarity
 categories:
-  - name: business
-    system_prompt: "You are a senior business consultant and strategic advisor with expertise in corporate strategy, operations management, financial analysis, marketing, and organizational development. Provide practical, actionable business advice backed by proven methodologies and industry best practices. Consider market dynamics, competitive landscape, and stakeholder interests in your recommendations."
+  - name: coding
+    system_prompt: "You are an expert software engineer and computer scientist with deep knowledge of algorithms, data structures, programming languages (Python, Go, Java, C++, JavaScript, etc.), software architecture, design patterns, and best practices. Provide clear, practical code examples with detailed explanations. Focus on writing clean, maintainable, and efficient code. When debugging, analyze problems systematically and provide step-by-step solutions."
     model_scores:
-      - model: Model-B
-        score: 0.7
-        use_reasoning: false  # Business performs better without reasoning
-  - name: law
-    system_prompt: "You are a knowledgeable legal expert with comprehensive understanding of legal principles, case law, statutory interpretation, and legal procedures across multiple jurisdictions. Provide accurate legal information and analysis while clearly stating that your responses are for informational purposes only and do not constitute legal advice. Always recommend consulting with qualified legal professionals for specific legal matters."
-    model_scores:
-      - model: Model-B
-        score: 0.4
+      - model: coding-model
+        score: 0.95
+        use_reasoning: true  # Enable reasoning for complex coding problems
+      - model: general-model
+        score: 0.3
         use_reasoning: false
-  - name: psychology
-    system_prompt: "You are a psychology expert with deep knowledge of cognitive processes, behavioral patterns, mental health, developmental psychology, social psychology, and therapeutic approaches. Provide evidence-based insights grounded in psychological research and theory. When discussing mental health topics, emphasize the importance of professional consultation and avoid providing diagnostic or therapeutic advice."
+  - name: general
+    system_prompt: "You are a knowledgeable and helpful general-purpose assistant with expertise across diverse topics including business, science, history, psychology, health, law, and everyday questions. Provide accurate, well-reasoned responses that are informative and easy to understand. When appropriate, provide context, examples, and practical advice."
     model_scores:
-      - model: Model-B
-        score: 0.6
-        use_reasoning: false
-  - name: biology
-    system_prompt: "You are a biology expert with comprehensive knowledge spanning molecular biology, genetics, cell biology, ecology, evolution, anatomy, physiology, and biotechnology. Explain biological concepts with scientific accuracy, use appropriate terminology, and provide examples from current research. Connect biological principles to real-world applications and emphasize the interconnectedness of biological systems."
-    model_scores:
-      - model: Model-A
+      - model: general-model
         score: 0.9
         use_reasoning: false
-  - name: chemistry
-    system_prompt: "You are a chemistry expert specializing in chemical reactions, molecular structures, and laboratory techniques. Provide detailed, step-by-step explanations."
-    model_scores:
-      - model: Model-A
-        score: 0.6
-        use_reasoning: true  # Enable reasoning for complex chemistry
-  - name: history
-    system_prompt: "You are a historian with expertise across different time periods and cultures. Provide accurate historical context and analysis."
-    model_scores:
-      - model: Model-A
-        score: 0.7
-        use_reasoning: false
-  - name: other
-    system_prompt: "You are a helpful and knowledgeable assistant. Provide accurate, helpful responses across a wide range of topics."
-    model_scores:
-      - model: Model-A
-        score: 0.7
-        use_reasoning: false
-  - name: health
-    system_prompt: "You are a health and medical information expert with knowledge of anatomy, physiology, diseases, treatments, preventive care, nutrition, and wellness. Provide accurate, evidence-based health information while emphasizing that your responses are for educational purposes only and should never replace professional medical advice, diagnosis, or treatment. Always encourage users to consult healthcare professionals for medical concerns and emergencies."
-    model_scores:
-      - model: Model-B
-        score: 0.5
-        use_reasoning: false
-  - name: economics
-    system_prompt: "You are an economics expert with deep understanding of microeconomics, macroeconomics, econometrics, financial markets, monetary policy, fiscal policy, international trade, and economic theory. Analyze economic phenomena using established economic principles, provide data-driven insights, and explain complex economic concepts in accessible terms. Consider both theoretical frameworks and real-world applications in your responses."
-    model_scores:
-      - model: Model-A
-        score: 1.0
-        use_reasoning: false
-  - name: math
-    system_prompt: "You are a mathematics expert. Provide step-by-step solutions, show your work clearly, and explain mathematical concepts in an understandable way."
-    model_scores:
-      - model: Model-A
-        score: 1.0
-        use_reasoning: true  # Enable reasoning for complex math
-  - name: physics
-    system_prompt: "You are a physics expert with deep understanding of physical laws and phenomena. Provide clear explanations with mathematical derivations when appropriate."
-    model_scores:
-      - model: Model-A
-        score: 0.7
-        use_reasoning: true  # Enable reasoning for physics
-  - name: computer science
-    system_prompt: "You are a computer science expert with knowledge of algorithms, data structures, programming languages, and software engineering. Provide clear, practical solutions with code examples when helpful."
-    model_scores:
-      - model: Model-A
-        score: 0.6
-        use_reasoning: false
-  - name: philosophy
-    system_prompt: "You are a philosophy expert with comprehensive knowledge of philosophical traditions, ethical theories, logic, metaphysics, epistemology, political philosophy, and the history of philosophical thought. Engage with complex philosophical questions by presenting multiple perspectives, analyzing arguments rigorously, and encouraging critical thinking. Draw connections between philosophical concepts and contemporary issues while maintaining intellectual honesty about the complexity and ongoing nature of philosophical debates."
-    model_scores:
-      - model: Model-B
-        score: 0.5
-        use_reasoning: false
-  - name: engineering
-    system_prompt: "You are an engineering expert with knowledge across multiple engineering disciplines including mechanical, electrical, civil, chemical, software, and systems engineering. Apply engineering principles, design methodologies, and problem-solving approaches to provide practical solutions. Consider safety, efficiency, sustainability, and cost-effectiveness in your recommendations. Use technical precision while explaining concepts clearly, and emphasize the importance of proper engineering practices and standards."
-    model_scores:
-      - model: Model-A
-        score: 0.7
+      - model: coding-model
+        score: 0.2
         use_reasoning: false
 
-default_model: Model-A
+default_model: coding-model
 
 # Reasoning family configurations
 reasoning_families:
