fix(grafana): prevent refusal rate panels from showing stale data
Issue: Refusal Rates and Refusal Rate Percentage panels kept showing
increasing values even when no traffic was present.

Root cause: rate() returns empty results when no activity in the time
window, but Grafana was showing last non-zero values or interpolating.

Fix:
- Added 'or vector(0)' to refusal rate queries to explicitly return 0
  when no errors in the time window
- Added 'or vector(1)' to denominator to prevent division by zero
- Added interval and intervalFactor parameters for better scraping

Affected panels:
- Refusal Rates by Model (time series)
- Refusal Rate Percentage by Model (bar gauge)

Now panels correctly drop to 0 when traffic stops.

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/deploy/openshift/observability/grafana/configmap-dashboard.yaml
+++ b/deploy/openshift/observability/grafana/configmap-dashboard.yaml
@@ -920,10 +920,12 @@ data:
                 "uid": "${DS_PROMETHEUS}"
               },
               "editorMode": "code",
-              "expr": "label_replace(sum(rate(llm_request_errors_total{reason=\"pii_policy_denied\"}[5m])) by (model), \"model\", \"semantic-router\", \"model\", \"auto\")",
+              "expr": "label_replace(sum(rate(llm_request_errors_total{reason=\"pii_policy_denied\"}[5m])) by (model) or vector(0), \"model\", \"semantic-router\", \"model\", \"auto\")",
               "legendFormat": "PII Policy Denied: {{model}}",
               "range": true,
-              "refId": "A"
+              "refId": "A",
+              "interval": "",
+              "intervalFactor": 1
             },
             {
               "datasource": {
@@ -931,10 +933,12 @@ data:
                 "uid": "${DS_PROMETHEUS}"
               },
               "editorMode": "code",
-              "expr": "label_replace(sum(rate(llm_request_errors_total{reason=\"jailbreak_block\"}[5m])) by (model), \"model\", \"semantic-router\", \"model\", \"auto\")",
+              "expr": "label_replace(sum(rate(llm_request_errors_total{reason=\"jailbreak_block\"}[5m])) by (model) or vector(0), \"model\", \"semantic-router\", \"model\", \"auto\")",
               "legendFormat": "Jailbreak Block: {{model}}",
               "range": true,
-              "refId": "B"
+              "refId": "B",
+              "interval": "",
+              "intervalFactor": 1
             }
           ],
           "title": "Refusal Rates by Model",
@@ -1011,10 +1015,12 @@ data:
                 "uid": "${DS_PROMETHEUS}"
               },
               "editorMode": "code",
-              "expr": "label_replace(sum(rate(llm_request_errors_total{reason=~\"pii_policy_denied|jailbreak_block\"}[5m])) by (model) / sum(rate(llm_model_requests_total[5m])) by (model), \"model\", \"semantic-router\", \"model\", \"auto\")",
+              "expr": "label_replace((sum(rate(llm_request_errors_total{reason=~\"pii_policy_denied|jailbreak_block\"}[5m])) by (model) or vector(0)) / (sum(rate(llm_model_requests_total[5m])) by (model) or vector(1)), \"model\", \"semantic-router\", \"model\", \"auto\")",
               "legendFormat": "{{model}}",
               "range": true,
-              "refId": "A"
+              "refId": "A",
+              "interval": "",
+              "intervalFactor": 1
             }
           ],
           "title": "Refusal Rate Percentage by Model",
