--- a/deploy/openshift/observability/prometheus/route.yaml
+++ b/deploy/openshift/observability/prometheus/route.yaml
@@ -14,4 +14,7 @@ spec:
     weight: 100
   port:
     targetPort: http
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
