fix(openshift): add TLS termination to dashboard route
The dashboard route was missing TLS termination configuration,
causing 503 errors when accessed via HTTPS. Added edge termination
with HTTP redirect to fix the issue.

Signed-off-by: Yossi Ovadia <yovadia@redhat.com>

--- a/deploy/openshift/dashboard/dashboard-deployment.yaml
+++ b/deploy/openshift/dashboard/dashboard-deployment.yaml
@@ -104,4 +104,7 @@ spec:
     weight: 100
   port:
     targetPort: http
+  tls:
+    termination: edge
+    insecureEdgeTerminationPolicy: Redirect
   wildcardPolicy: None
